--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.17",
     "expo-constants": "~15.4.6",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "styled-components": "^6.1.9",
-    "@react-native-community/datetimepicker": "7.6.1"
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
