--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,8 @@
 		"react-native-safe-area-context": "4.8.2",
 		"react-native-screens": "~3.29.0",
 		"react-native-svg": "12.1.1",
-		"styled-components": "^6.1.9"
+		"styled-components": "^6.1.9",
+		"swagger-ui-express": "^5.0.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0"
