--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,9 @@
 		"formik": "^2.4.6",
 		"react": "18.2.0",
 		"react-native": "0.73.6",
+		"react-native-calendars": "^1.1304.1",
 		"react-native-gesture-handler": "~2.14.0",
+		"react-native-paper": "^5.12.3",
 		"react-native-reanimated": "^3.11.0",
 		"react-native-safe-area-context": "4.8.2",
 		"react-native-screens": "~3.29.0",
