--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "swagger-ui-express": "^5.0.0"
   }
 }
