--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"main": "node_modules/expo/AppEntry.js",
 	"scripts": {
-		"start": "expo start",
+		"start": "expo start --port 3000",
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web"
@@ -28,7 +28,10 @@
 		"react-native-screens": "~3.29.0",
 		"react-native-svg": "12.1.1",
 		"styled-components": "^6.1.9",
-		"swagger-ui-express": "^5.0.0"
+		"swagger-ui-express": "^5.0.0",
+		"react-dom": "18.2.0",
+		"react-native-web": "~0.19.6",
+		"@expo/metro-runtime": "~3.1.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0"
