--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
 # dependencies
 node_modules/
 
@@ -34,3 +32,16 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# modules
+/node_modules/
+
+# dependencies
+.env
+
+# seed files
+**/seeds
+**/migrations
+
+# server logs file
+access.txt
