Finalize project merge (#1)
* Set up prettier format config

* (feat) Add Login page screen

* (img) Add justdo image file

* (feat) Add Signup page screen

* (feat) Add settings screen

* (feat) Add logout page screen

* (chore) Update default app and install dependencies

* (feat) Create KeyAvoidingWrapper component

* (feat) Setup Rootstack for navigator

* (chore) Add navigators to each screen page

* (chore) Small style adjustment for styled container

* (chore) Adjustment on root stack navigation ans style

* (chore) separate app/server code and rename file name

* (refactor) redesign tabbar

* (feat) Add task screen page

* (feat) Server initial commit

* (chore) minor update to login page

* (feat) fix root stack routing

* (feat) Redesign calendar screen

* (server) create db config

* (server) create init.sql script

* (server) create todo/user routes

* (server) modified server app.js

* (server) create initial swagger file

* (server) add user/todos route to app

* (server) add db config and adjust sql script

* (server) npm install swagger

* (server) update .gitignore

* (app) reorganize style.jsx and restyle components

* (app) add about page first edition

* (config) combine .gitignore file for whole project

* (app) finalize about page and display license details

* (app) update settings screen name

* (app) set up darkmode setting and useTheme

* (app) add darkmode style for settings screen

* (app) add dark mode to about screen and minor style change for settings

* (app) add darkmode style to calendar screen and task components

* (app) add darkmode for todo screen

* (app) minor style fix for darkmode

* (app) fix data not showing error

* (app) add darkmode style for tabbar and header title

* (app) [need fix] error displaying calendar theme

* (server) allow expo host on server

* (app) change directory name of context provider

* (app) add auth context pro

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
 # dependencies
 node_modules/
 
@@ -29,7 +27,22 @@ yarn-error.*
 *.pem
 
 # local env files
+.env
+.example.env
 .env*.local
 
 # typescript
 *.tsbuildinfo
+
+# modules
+/node_modules/
+
+# dependencies
+.env
+
+# seed files
+**/seeds
+**/migrations
+
+# server logs file
+access.txt
