--- a/app/package.json
+++ b/app/package.json
@@ -9,12 +9,12 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
-		"@react-native-community/datetimepicker": "7.6.1",
+		"@react-native-community/datetimepicker": "7.7.0",
 		"@react-navigation/bottom-tabs": "^6.5.20",
 		"@react-navigation/native": "^6.1.17",
 		"@react-navigation/native-stack": "^6.9.26",
 		"@react-navigation/stack": "^6.3.29",
-		"expo": "~50.0.17",
+		"expo": "~50.0.19",
 		"expo-constants": "~15.4.6",
 		"expo-status-bar": "~1.11.1",
 		"react": "18.2.0",
@@ -22,10 +22,10 @@
 		"react-native-calendars": "^1.1304.1",
 		"react-native-gesture-handler": "~2.14.0",
 		"react-native-paper": "^5.12.3",
-		"react-native-reanimated": "^3.11.0",
+		"react-native-reanimated": "~3.6.2",
 		"react-native-safe-area-context": "4.8.2",
 		"react-native-screens": "~3.29.0",
-		"react-native-svg": "12.1.1",
+		"react-native-svg": "14.1.0",
 		"react-dom": "18.2.0",
 		"react-native-web": "~0.19.6",
 		"@expo/metro-runtime": "~3.1.3"
